# ducer

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  check_docstrings.py  docstrings.py  insert_docstrings.py  pyproject.toml  stubtest.allowlist
.github/: dependabot.yml
.github/workflows/: build_wheels.yml
doc/: Makefile  prep.py
doc/source/: api_reference.rst  conf.py  index.rst
doc/source/_static/css/: custom.css
doc/source/_templates/: links.html
ducer/: __init__.py  _fst.pyi  _version.py
rust/: Cargo.toml
rust/src/: automaton.rs  buffer.rs  encoding.rs  lib.rs  map.rs  set.rs
rust/src/automaton/: fst_fork.rs  mod.rs
simplefst/: __init__.py
tests/: test_map.py  test_set.py
