[project]
name = "simplefst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.setuptools_scm]

[tool.setuptools.packages]
find = { where = ["simplefst"] }

[build-system]
requires = [
    "setuptools>=71.1.0",
    "setuptools-rust>=1.9.0",
    "setuptools_scm>=8.1.0",
]
build-backend = "setuptools.build_meta"

[[tool.setuptools-rust.ext-modules]]
target = "_fst"
path = "rust/Cargo.toml"
binding = "PyO3"

[tool.cibuildwheel]
environment = "PIP_ONLY_BINARY=:all: CARGO_HOME=/usr/local/"
skip = "*_i686 pp* *musllinux* cp{31[!01],3[!01]?,[!3]*}-win32"
build-verbosity = 1
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
before-build = "cargo clean --manifest-path rust/Cargo.toml"
build-frontend = "build"
#test-requires = "pytest>=5.3.2 numpy Pillow>=7.0.0"
#test-command = "pytest {project}/test -vv"
